--- a/rtl/amiga/Makefile
+++ b/rtl/amiga/Makefile
@@ -1404,7 +1404,7 @@ SYSCPUDEPS=$(addprefix $(PROCINC)/,$(CPUINCNAMES))
 SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS)
 prt0$(OEXT) : prt0$(LOADEREXT)
 	-$(AS) prt0$(LOADEREXT) -o prt0$(OEXT)
-$(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).pas $(SYSLINUXDEPS) $(SYSDEPS)
+$(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).pp $(SYSLINUXDEPS) $(SYSDEPS)
 	$(COMPILER) -ui386 -dm68k -Us -Sg $(SYSTEMUNIT).pas $(REDIR)
 strings$(PPUEXT) : ../template/strings.pp system$(PPUEXT)
 	$(COMPILER) ../template/strings.pp $(REDIR)
