--- a/rtl/amiga/Makefile
+++ b/rtl/amiga/Makefile
@@ -1405,7 +1405,7 @@ SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS)
 prt0$(OEXT) : prt0$(LOADEREXT)
 	-$(AS) prt0$(LOADEREXT) -o prt0$(OEXT)
 $(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).pp $(SYSLINUXDEPS) $(SYSDEPS)
-	$(COMPILER) -ui386 -dm68k -Us -Sg $(SYSTEMUNIT).pas $(REDIR)
+	$(COMPILER) -ui386 -dm68k -Us -Sg $(SYSTEMUNIT).pp $(REDIR)
 strings$(PPUEXT) : ../template/strings.pp system$(PPUEXT)
 	$(COMPILER) ../template/strings.pp $(REDIR)
 exec$(PPUEXT) : exec.pp exec.inc system$(PPUEXT)
