--- a/rtl/amiga/Makefile.fpc
+++ b/rtl/amiga/Makefile.fpc
@@ -94,7 +94,7 @@ prt0$(OEXT) : prt0$(LOADEREXT)
 #
 
 $(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).pp $(SYSLINUXDEPS) $(SYSDEPS)
-	$(COMPILER) -ui386 -dm68k -Us -Sg $(SYSTEMUNIT).pas $(REDIR)
+	$(COMPILER) -ui386 -dm68k -Us -Sg $(SYSTEMUNIT).pp $(REDIR)
 
 strings$(PPUEXT) : ../template/strings.pp system$(PPUEXT)
 	$(COMPILER) ../template/strings.pp $(REDIR)
@@ -148,7 +148,10 @@ heaptrc$(PPUEXT) : $(INC)/heaptrc.pp system$(PPUEXT)
 
 #
 # $Log$
-# Revision 1.5  2004-05-06 21:12:41  florian
+# Revision 1.6  2004-05-06 22:01:17  florian
+#   * changed extensions
+#
+# Revision 1.5  2004/05/06 21:12:41  florian
 #   * changed extensions
 #
 #
